Added sql prep